# mediasoup-demo-rs

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package.json  webpack.config.js
frontend/src/: index.ts
public/: index.html
src/: codec.rs  main.rs  participant.rs  record.rs  room.rs  rooms_registry.rs  runtime.rs  worker.rs
