[package]
name = "mediasoup-demo-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3" }
mediasoup = "0.8"
anyhow = "1"
num_cpus = "1"
