[package]
name = "mediasoup-demo-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.2"
mediasoup = "0.8"
anyhow = "1"
num_cpus = "1"
parking_lot = "0.11"
event-listener = "2.5"
event-listener-primitives = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

log = "0.4"
log4rs = "1"
